--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@preact/signals": "^1.2.2",
     "axios": "^1.6.7",
+    "buffer": "^6.0.3",
+    "date-fns": "^2.30.0",
     "preact": "^10.19.6",
     "preact-router": "^4.1.2"
   },
