--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
     command: fastapi
-    ports:
-      - "8080:8000"
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/keepclone
+      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD:-postgres}@db:5432/keepclone
       - SECRET_KEY=${SECRET_KEY:-your-secret-key-for-development}
       - REDIS_URL=redis://redis:6379/0
       - UPLOAD_DIR=/app/uploads
@@ -17,8 +15,7 @@ services:
       - ENABLE_HTTPS=true
     volumes:
       - ./uploads:/app/uploads
-      - ./src:/app/src  # For development hot-reload
-      - ./ssl:/app/ssl  # For SSL certificates
+      - ./src:/app/src
     depends_on:
       - db
       - redis
@@ -26,10 +23,10 @@ services:
       - keepclone-network
 
   db:
-    image: postgres:15-alpine
+    image: postgres:16-alpine  # Updated to match your existing volume
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
       - POSTGRES_DB=keepclone
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -71,10 +68,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./uploads:/app/uploads
-      - ./ssl:/etc/nginx/ssl:ro  # Mount SSL certificates
-      - ./frontend/dist:/app/frontend/dist:ro  # Mount built frontend
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./uploads:/app/uploads:ro
+      - ./frontend/dist:/usr/share/nginx/html:ro
+      - /etc/letsencrypt/live/lockedin.bidseek.dev/fullchain.pem:/etc/nginx/ssl/cert.pem:ro
+      - /etc/letsencrypt/live/lockedin.bidseek.dev/privkey.pem:/etc/nginx/ssl/key.pem:ro
     depends_on:
       - backend
     networks:
