--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "preact": "^10.19.6",
-    "preact-router": "^4.1.2"
+    "preact-router": "^4.1.2",
+    "react-bootstrap-icons": "^1.11.5"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.1",
