--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,5 @@
-# Main nginx configuration
 events {
-    worker_connections 1024;
+    worker_connections 512;
 }
 
 http {
@@ -13,66 +12,82 @@ http {
 
     # Basic settings
     sendfile        on;
-    keepalive_timeout  65;
+    keepalive_timeout 65;
     client_max_body_size 100M;
 
     # Gzip settings
-    gzip  on;
+    gzip on;
     gzip_vary on;
     gzip_min_length 10240;
     gzip_proxied expired no-cache no-store private auth;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
     gzip_disable "MSIE [1-6]\.";
 
-    # Upstream for backend
-    upstream backend {
-        server backend:8000;
-    }
-
-    # Default server configuration
+    # HTTP server
     server {
         listen 80;
-        server_name lockedin.bidseek.dev;
-        return 301 https://$server_name$request_uri;
-    }
+        server_name localhost;
 
-    server {
-        listen 443 ssl;
-        server_name lockedin.bidseek.dev;
-
-        # SSL configuration
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers off;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-
-        # Security headers
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-
-        # API endpoints
+        # Location block for endpoints with /api
         location /api/ {
+            rewrite ^/api/(.*) /$1 break;
             proxy_pass http://backend:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection upgrade;
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' 'https://lockedin.bidseek.dev' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            # CORS headers for development
+            add_header "Access-Control-Allow-Origin" "http://localhost:5173" always;
+            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, PUT, DELETE, PATCH" always;
+            add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+            add_header "Access-Control-Allow-Credentials" "true" always;
+
+            # Handle OPTIONS method
+            if ($request_method = 'OPTIONS') {
+                add_header "Access-Control-Allow-Origin" "http://localhost:5173" always;
+                add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, PUT, DELETE, PATCH" always;
+                add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+                add_header "Access-Control-Max-Age" 1728000;
+                add_header "Content-Type" "text/plain charset=UTF-8";
+                add_header "Content-Length" 0;
+                return 204;
+            }
+        }
+
+        # Additional location block for endpoints without /api prefix (e.g., /users, /token)
+        location ~ ^/(users|token) {
+            rewrite ^/(.*)$ /$1 break;
+            proxy_pass http://backend:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection upgrade;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # CORS headers for development
+            add_header "Access-Control-Allow-Origin" "http://localhost:5173" always;
+            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, PUT, DELETE, PATCH" always;
+            add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+            add_header "Access-Control-Allow-Credentials" "true" always;
+
+            # Handle OPTIONS method
+            if ($request_method = 'OPTIONS') {
+                add_header "Access-Control-Allow-Origin" "http://localhost:5173" always;
+                add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, PUT, DELETE, PATCH" always;
+                add_header "Access-Control-Allow-Headers" "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+                add_header "Access-Control-Max-Age" 1728000;
+                add_header "Content-Type" "text/plain charset=UTF-8";
+                add_header "Content-Length" 0;
+                return 204;
+            }
         }
 
         # Serve uploaded files
@@ -90,4 +105,4 @@ http {
             add_header Cache-Control "public, no-transform";
         }
     }
-} 
+}
